# study

./: README.md
algorithm/: Makefile  README.txt  astar.cpp  astar.h  offer.cpp  test.cpp
aoi/: CMakeLists.txt  aoi.cpp  aoi.h  aoi_old.cpp  aoi_old.h  aoi_x.cpp  aoi_x.h  aoi_x2.cpp  aoi_x2.h  main.cpp
backup/: Makefile_lib  startup.cpp  startup.lua  stu.cpp
bash/: Makefile  stu.sh  test1.sh  test2.sh  test3.sh
boost_test/: Makefile  asio_server_async.cpp  asio_server_block.cpp  asio_test.cpp  test.cpp
c/: .gitignore  Makefile  alpha_list.c  alpha_list.h  alpha_list_test.c  book.txt  check_cr.c  clib.c  empty.c  extern_test1.c  extern_test2.c  locker.c  myfile2.txt  name_boy.txt  name_girl.txt  name_xing.txt  pthread_test.c  socket_client.c  socket_server.c  socket_unix.c  stu.c  test.c  write_file.c
c/static_test/: Makefile  main.c  tool.c  tool.h
cmake_test/: CMakeLists.txt  main.cpp
cmake_test/my_dir/: test.cpp  test.h
cmake_test/test1/: CMakeLists.txt  clean_cmake.sh
cmake_test/test2/: CMakeLists.txt  main.cpp
cmake_test/test2/src/: CMakeLists.txt  dog.cpp
cmake_test/test3/: CMakeLists.txt  clean_cmake.sh
cmake_test/test3/core/: CMakeLists.txt
cmake_test/test3/main/: CMakeLists.txt
cmake_test/test4/: CMakeLists.txt  clean_cmake.sh
cmake_test/test5/: CMakeLists.txt  clean_cmake.sh  dog.h
cmake_test/test6/: CMakeLists.txt
cmake_test/test6/cat/: cat.cpp  cat.h
cplus/: .gitignore  Config.h  Illegal.txt  Makefile  README.txt  acctabc.cpp  acctabc.h  animal.cpp  animal.h  class_test.cpp  class_test.h  class_test_run.cpp  class_tp.h  config_test.cpp  container.cpp  counter.cpp  counter.h  error_means.cpp  frnd2tmp.cpp  function_tp.cpp  macro_test.cpp  member_tp.cpp  my_string.cpp  my_string.h  order_queue_tp.cpp  order_queue_tp.h  queue_tp.cpp  queue_tp.h  read_file.cpp  rtti.cpp  sensitive_word_filter.cpp  sensitive_word_filter.h  sensitive_word_filter_test.cpp  sizeof_test.cpp  smart_pointer.cpp  stack_tp.cpp  stack_tp.h  stock.cpp  stock.h  str_queue.cpp  (+20 more)
cplus/c++11/: .gitignore  Makefile  TaskThread.h  TaskThread2.h  TaskThreadTest.cpp  bind_test.cpp  enumclass_test.cpp  forward_test.cpp  lambda.cpp  random_engine.cpp  raw_string_literal.cpp  rvalue.cpp  rvalue_reference.cpp  wrapper.cpp
cplus/template/: .gitignore  Makefile  class_tp.cpp  class_tp.h  function_tp.cpp  member_tp.cpp  nest_tp.cpp  test_typename.cpp  type_tp.cpp  variadic_tp.cpp
cserver/: Makefile  cserver.c  fdwatch.c  fdwatch.h
curl/: Makefile  README.txt  test.cpp
cwebserver/: Makefile  base64.h  cserver.c  dbio.c  fdwatch.c  fdwatch.h  sha1.h
design/: ClassFactory.h  ClassSingleton.h  Makefile  Test.cpp
epoll_server/ec1/: Makefile  epoll_client.cpp
epoll_server/es1/: Makefile  epoll_server.cpp
epoll_server/es2/: Makefile  epoll_server_mt.cpp
epoll_server/es3/: Makefile  epoll_client.cpp  epoll_server.cpp  msg_head.h
epoll_server/es4/: Makefile  epoll_lua_server.cpp  game_server.cpp  socket_epoll.h  socket_kqueue.h  socket_poll.h
fcgi/: Makefile  demo1.cpp  demo2.cpp
fdpoll/: Makefile  fdpoll.c  fdpoll.h  net_util.h  ss.c
gdb_test/: Makefile  test_gdb.cpp
golang/echo_server/: main.go
golang/telnet/: main.go
golang/transit/: main.go
golang/websocket/: websocket_client.go  websocket_server.go
gprof_test/: CMakeLists.txt  stu.cpp
http_server/hs1/: HttpServer.cpp  HttpSocketManager.cpp  HttpSocketManager.h  Makefile
http_server/hs2/: HttpClient.cpp  HttpServer.cpp  HttpServer.h  Makefile  Util.h
http_server/hs3/: HttpServer.cpp  Makefile
http_server/hs4/: Makefile  http_connect.h  http_request.h  http_response.h  http_server.cpp  http_test.cpp  http_util.h  (+1 more)
javascript/: main.js  main_ts.ts  module_class.js  module_func.js
jsoncpp/: Makefile  test.cpp
leetcode/: 1_two_sum.cpp  2_add_two_numbers.cpp  3_longest_substring_without_repeating_characters.cpp  Makefile  test.cpp
lib_test/cross/: CMakeLists.txt  dl_loader.cpp  dl_loader.h  main.cpp
lib_test/cross/lib-src/: CMakeLists.txt  mylib.cpp
libevent_test/sc1/: .gitignore  CMakeLists.txt  Makefile  client_test.cpp  server_test.cpp  tags
libevent_test/timer_test/: .gitignore  CMakeLists.txt  Makefile  clean_cmake.sh  timer_test.cpp
lua/: for_test_module.lua  for_test_run.lua  metatable_test.lua  module.lua  my_module.lua  my_module2.lua  my_module3.lua  stu.lua  stu2.lua  stu3.lua  stu4.lua  stu5.lua  stu6.lua  test.lua  test_boolean.lua  test_coroutine.lua  test_data_structure.lua  test_env.lua  test_expression.lua  test_function.lua  test_io.lua  test_iter.lua  test_metatable.lua  test_module.lua  test_number.lua  test_oo.lua  test_os.lua  test_run.lua  test_string.lua  test_table.lua  util.lua
lua/clua/: .gitignore  CMakeLists.txt  Makefile  clean_cmake.sh  lua_cmodule_a.c  lua_cmodule_b.c  lua_interpreter.c  stu.c  test1.lua  test2.lua  test_c.lua
lua/windows/: CMakeLists.txt
lua/windows/lfs/: CMakeLists.txt
lua/windows/lua/: CMakeLists.txt
makefile_test/: Makefile  test.cpp
mongodb/: Base64.h  Makefile  MongoOperator.cpp  MongoOperator.h  mon2.cpp
mysql/: CMakeLists.txt  Makefile  mysql_operator.cpp  mysql_operator.h  mysql_test.cpp  mysql_test2.cpp  test-init.sql  test_lock.cpp  test_lock.sql
pattern/: Makefile
protobuf/: Makefile  masha.proto  stu.cpp  test.cpp  test2.cpp
python/: calc.py  gevent_lock.py  gevent_queue.py  gevent_test.py  hello.py  input_test.py  insert_redeem_code.py  math_test.py  merge_file.py  print.py  stu.py  test_list.py  test_xml.py  test_xml.xml
redis/: Makefile  test_hash.cpp  test_string.cpp
unix_ipc/: README.txt
unix_network/: Makefile  README.txt  dns_test.c  epoll_client.c  epoll_server.c  exec_test.c  fork_client.c  poll_client.c  pthread_test.c  pthread_test2.c  pthread_test3.c  select_client.c  simple_server.c  syslog_test.c  udp_client.c  udp_server.c  usock_client.c  usock_server.c  usock_test.c
unix_sys/: Makefile  process_test.c
valgrind_test/: CMakeLists.txt  Makefile  README.txt  callgrind_test.cpp  clean_cmake.sh  stu.cpp
zeromq_test/: CMakeLists.txt
zeromq_test/server/: CMakeLists.txt  main.cpp
(+84 files in other folders)
