#define cmake version
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(PROJECT_NAME mysql_study)

SET(TARGET_MYSQL_OPERATOR mysql_operator)
SET(TARGET_MYSQL_TEST mysql_test)
SET(TARGET_MYSQL_TEST2 mysql_test2)
SET(TARGET_TEST_LOCK test_lock)

#define project name
PROJECT(${PROJECT_NAME})

#add include path
# INCLUDE_DIRECTORIES(. /usr/local/include /usr/local/include/mysql /usr/include/mysql)
INCLUDE_DIRECTORIES(. /usr/local/include )

#add lib path
# LINK_DIRECTORIES(/usr/local/lib /usr/local/mysql/lib)
LINK_DIRECTORIES(/usr/local/lib)

IF (WIN32)  
	MESSAGE(STATUS "OS: WIN32")  
ELSEIF (APPLE)  
	MESSAGE(STATUS "OS: APPLE")  
	INCLUDE_DIRECTORIES(/usr/local/include/mysql)
	LINK_DIRECTORIES(/usr/local/mysql/lib)
ELSEIF (UNIX)  
	MESSAGE(STATUS "OS: UNIX")  
ENDIF ()  

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} ${CMAKE_CXX_FLAGS} -std=c++11")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -Wall")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")

SET(LIBRARIES "mysqlclient")

SET(FILES_MYSQL_OPERATOR mysql_operator.cpp mysql_operator.h)
SET(FILES_MYSQL_TEST "mysql_test.cpp")
SET(FILES_MYSQL_TEST2 "mysql_test2.cpp")
SET(FILES_TEST_LOCK "test_lock.cpp")

ADD_LIBRARY(${TARGET_MYSQL_OPERATOR} ${FILES_MYSQL_OPERATOR})
ADD_EXECUTABLE(${TARGET_MYSQL_TEST} ${FILES_MYSQL_TEST})
TARGET_LINK_LIBRARIES(${TARGET_MYSQL_TEST} ${LIBRARIES})
ADD_EXECUTABLE(${TARGET_MYSQL_TEST2} ${FILES_MYSQL_TEST2})
TARGET_LINK_LIBRARIES(${TARGET_MYSQL_TEST2} ${LIBRARIES} ${TARGET_MYSQL_OPERATOR})
ADD_EXECUTABLE(${TARGET_TEST_LOCK} ${FILES_TEST_LOCK})
TARGET_LINK_LIBRARIES(${TARGET_TEST_LOCK} ${LIBRARIES} ${TARGET_MYSQL_OPERATOR})

