#define cmake version
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(PROJECT_NAME sc1)
SET(TARGET_SERVER server_test)
SET(TARGET_CLIENT client_test)

#define project name
PROJECT(${PROJECT_NAME})

IF (WIN32)  
	MESSAGE(STATUS "OS: WIN32")  
ELSEIF (APPLE)  
	MESSAGE(STATUS "OS: APPLE")  
ELSEIF (UNIX)  
	MESSAGE(STATUS "OS: UNIX")  
ENDIF ()  

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} ${CMAKE_CXX_FLAGS} -std=c++11")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -Wall")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")

SET(SRCS_SERVER "server_test.cpp")
SET(SRCS_CLIENT "client_test.cpp")

#add include path
INCLUDE_DIRECTORIES(
./
/usr/local/include
)

#add lib path
LINK_DIRECTORIES(
/usr/local/lib
)

SET(LIBRARIES "event")

#add lib
#LINK_LIBRARIES(event)

#$DIR_SRCS file create a execute file, name as main
ADD_EXECUTABLE(${TARGET_SERVER} ${SRCS_SERVER})
ADD_EXECUTABLE(${TARGET_CLIENT} ${SRCS_CLIENT})

TARGET_LINK_LIBRARIES(${TARGET_SERVER} ${LIBRARIES})
TARGET_LINK_LIBRARIES(${TARGET_CLIENT} ${LIBRARIES})
